--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {color: white;
   max-width: 300px;
   margin: auto;
   margin-bottom: 50px;
-}
+} /*Intro config*/
 
 td {background-color;
 text-align: center;
@@ -30,7 +30,7 @@ table{ margin: auto;
      text-align: left;
      border-collapse: collapse
      background-color: none;
-  }
+  } /*Tableau config*/
 
 
 p {font-family: cursive;
@@ -60,6 +60,7 @@ margin-bottom: 50px;
 
 @media screen and (max-width: 625px)
 {
-
+/*Passage mode tablette, telephone*/
 
 }
+/*FIN*/
